# eBookForgePro

./: EbookForgePro_final.py  README.md  ebookforgepro.py  example.py  pyproject.toml
EbookForgeProject/exports/: Sample_Book.epub  Sample_Book.md
src/ebookforgepro/: __init__.py  ai.py  app.py  cli.py  core.py  dependencies.py  exporters.py  image.py  music.py  uploaders.py
src/ebookforgepro.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
